# hw04-JakeKitzmann

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/CurvatureAD/: CMakeLists.txt  CurvatureAD.cxx  CurvatureAD.xml  README.md
src/DOG/: CMakeLists.txt  DOG.cxx  DOG.xml
src/DifferenceOfGaussians/: CMakeLists.txt  DifferenceOfGaussians.cxx  DifferenceOfGaussians.xml
src/Gaussian/: CMakeLists.txt  Gaussian.cxx  Gaussian.xml  README.md
src/GaussianLPF/: CMakeLists.txt  GaussianLPF.cxx  GaussianLPF.xml
src/GradientAD/: CMakeLists.txt  GradientAD.cxx  GradientAD.xml  README.md
src/SimpleThreshold/: CMakeLists.txt  SimpleThreshold.cxx  SimpleThreshold.xml
